--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav>
         <div class="menu">
             <div class="logo">
-                <img src="/img/header_logo.png" alt="チーズアカデミーロゴ">
+                <img src="img/header_logo.png" alt="チーズアカデミーロゴ">
 
             </div>
 
@@ -107,16 +107,16 @@
         <div class="d-demo">
             <div class="d-demo__wrap">
                 <ul class="d-demo__list d-demo__list--left">
-                    <li class="d-demo__item"><img src="/img/about_01.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_02.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_03.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_04.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_01.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_02.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_03.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_04.jpg" alt></li>
                 </ul>
                 <ul class="d-demo__list d-demo__list--left">
-                    <li class="d-demo__item"><img src="/img/about_01.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_02.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_03.jpg" alt></li>
-                    <li class="d-demo__item"><img src="/img/about_04.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_01.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_02.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_03.jpg" alt></li>
+                    <li class="d-demo__item"><img src="img/about_04.jpg" alt></li>
                 </ul>
             </div>
         </div>
@@ -138,7 +138,7 @@
 
             <!-- COURSE 写真〜 -->
             <div class="course_wrap">
-                <img src="/img/course_01.jpg">
+                <img src="img/course_01.jpg">
 
                 <div class="course_box">
                     <h3>本格的な農園を使った実地研修</h3>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="course_wrap">
-                <img src="/img/course_02.jpg">
+                <img src="img/course_02.jpg">
 
                 <div class="course_box">
                     <h3>必要な知識もしっかりと取得</h3>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="course_wrap">
-                <img src="/img/course_03.jpg">
+                <img src="img/course_03.jpg">
 
                 <div class="course_box">
                     <h3>卒業制作はティスティング審査あり</h3>
@@ -188,7 +188,7 @@
                 <ul class="news_list">
                     <li class="news_item">
                         <div>
-                            <img src="/img/news_img.jpg" alt="">
+                            <img src="img/news_img.jpg" alt="">
                         </div>
 
                         <div>
@@ -201,7 +201,7 @@
 
                     <li class="news_item">
                         <div>
-                            <img src="/img/news_img.jpg" alt="">
+                            <img src="img/news_img.jpg" alt="">
                         </div>
 
                         <div>
@@ -214,7 +214,7 @@
 
                     <li class="news_item">
                         <div>
-                            <img src="/img/news_img.jpg" alt="">
+                            <img src="img/news_img.jpg" alt="">
                         </div>
 
                         <div>
