--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/sanitize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="icon" href="/img/cheeze_cursor.png">
+    <link rel="icon" href="img/cheeze_cursor.png">
     <!-- あらかじめcssを読み込んでいるので設定しなくてOK-->
 </head>
 
