--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <table>
                         <tr>
                             <th>名前</th>
-                            <td><input type="text" class="form_text" placeholder="（例）かまん　べる子" autofocus required></td>
+                            <td><input type="text" class="form_text" placeholder="（例）かまん　べる子" required></td>
                         </tr>
                         <tr>
                             <th>カナ</th>
